style.css
/* ... */
#mainInput {
  width: auto;
}

#mainColorDisplay {
  display: flex;
}
#mainColorDisplay .inner {
  display: flex;
  flex-direction: column;
  border-radius: 4px;
  overflow: hidden;
  border: 1px solid #000;
  background: url(checkers.png);
  flex-grow: 1;
}
#mainColorDisplay .inner .solid, #mainColorDisplay .inner .alpha {
  flex-grow: 1;
}

#satValSlider {
  display: flex;
  padding: 16px;
}
#satValSlider .sliderOuter {
  width: 100%;
  height: 100%;
  border: 1px solid #000;
  position: relative;
}
#satValSlider .sliderOuter .sliderInner {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-image: linear-gradient(#0000, #000), linear-gradient(to right, #fff, #fff0);
  background-color: #f00;
}
#satValSlider .sliderOuter .sliderMarker {
  position: absolute;
  width: 2px;
  height: 2px;
  left: 50px;
  top: 50px;
  margin-top: -1px;
  margin-left: -1px;
  border-color: #fff;
}
#satValSlider .sliderOuter .sliderMarker:before {
  content: "";
  position: absolute;
  top: 0;
  left: -8px;
  width: 6px;
  height: 2px;
  border-left: 6px solid #fff;
  border-right: 6px solid #fff;
  border-color: inherit;
}
#satValSlider .sliderOuter .sliderMarker:after {
  content: "";
  position: absolute;
  top: -8px;
  left: 0;
  width: 2px;
  height: 6px;
  border-top: 6px solid #fff;
  border-bottom: 6px solid #fff;
  border-color: inherit;
}

#modeCopyController {
  display: grid;
  grid-gap: 5px;
}
#modeCopyController .mainMode {
  grid-area: 1/1/2/3;
}
#modeCopyController .previews {
  grid-area: 2/1/3/2;
}
#modeCopyController .copys {
  grid-area: 2/2/3/3;
}
#modeCopyController .controlGroup {
  margin: 0;
}
#modeCopyController .previews .button {
  text-align: center;
}

#gradientController {
  position: absolute;
  left: 250px;
  top: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 15px 0;
  background: #181818;
}
#gradientController .gradientSwatch {
  height: 150px;
  width: 150px;
  border-radius: 8px;
  flex-shrink: 1;
  position: relative;
  background-image: url(checkers.png);
}
#gradientController .gradientSwatch .addBefore,
#gradientController .gradientSwatch .addAfter,
#gradientController .gradientSwatch .addMultiBefore,
#gradientController .gradientSwatch .duplicate,
#gradientController .gradientSwatch .delete {
  position: absolute;
  height: 40px;
  text-align: center;
  cursor: pointer;
  z-index: 3;
  padding: 8px;
  font-size: 23px;
  color: #fff0;
  transition: color 0.2s;
}
#gradientController .gradientSwatch .addBefore:hover,
#gradientController .gradientSwatch .addAfter:hover,
#gradientController .gradientSwatch .addMultiBefore:hover,
#gradientController .gradientSwatch .duplicate:hover,
#gradientController .gradientSwatch .delete:hover {
  color: #ffff;
}
#gradientController .gradientSwatch .addBefore:before,
#gradientController .gradientSwatch .addAfter:before,
#gradientController .gradientSwatch .addMultiBefore:before,
#gradientController .gradientSwatch .duplicate:before,
#gradientController .gradientSwatch .delete:before {
  content: "";
  z-index: -1;
  position: absolute;
  top: 20px;
  bottom: 20px;
  left: 0;
  right: 0;
  background: #181818;
  transition: top ease-in 0.15s, bottom ease-in 0.15s;
  border-radius: 5px;
}
#gradientController .gradientSwatch .addBefore:hover:before,
#gradientController .gradientSwatch .addAfter:hover:before,
#gradientController .gradientSwatch .addMultiBefore:hover:before,
#gradientController .gradientSwatch .duplicate:hover:before,
#gradientController .gradientSwatch .delete:hover:before {
  top: 0px;
  bottom: 0px;
  transition: top ease-out 0.15s, bottom ease-out 0.15s;
}
#gradientController .gradientSwatch:hover .addBefore, #gradientController .gradientSwatch:hover .addAfter, #gradientController .gradientSwatch:hover .addMultiBefore, #gradientController .gradientSwatch:hover .duplicate, #gradientController .gradientSwatch:hover .delete {
  color: #fff3;
}
#gradientController .gradientSwatch .addBefore, #gradientController .gradientSwatch .addMultiBefore {
  top: -20px;
}
#gradientController .gradientSwatch .addBefore, #gradientController .gradientSwatch .addAfter {
  left: 30%;
  right: 30%;
}
#gradientController .gradientSwatch .addMultiBefore {
  left: 70%;
  right: 0%;
}
#gradientController .gradientSwatch .addAfter {
  bottom: -20px;
}
#gradientController .gradientSwatch:not(:last-child) .addAfter {
  display: none;
}
#gradientController .gradientSwatch:first-child .addMultiBefore {
  display: none;
}
#gradientController .gradientSwatch .duplicate {
  left: -20px;
  width: 40px;
  top: 50%;
  bottom: auto;
  margin-top: -20px;
}
#gradientController .gradientSwatch:only-child .delete {
  display: none;
}
#gradientController .gradientSwatch .delete {
  right: -20px;
  left: auto;
  width: 40px;
  top: 50%;
  bottom: auto;
  margin-top: -20px;
}
#gradientController .gradientSwatch:not(.active) .isActive {
  display: none;
}
#gradientController .gradientSwatch .isActive {
  position: absolute;
  left: 8px;
  top: 8px;
  font-size: 20px;
}

#gradientController .gradientSwatch:hover + .gradientSwatch .addBefore {
  color: #fff3;
}

#gradientController .gradientSwatch:hover + .gradientSwatch .addMultiBefore {
  color: #fff3;
}

#gridControllerWrapper {
  position: absolute;
  left: 250px;
  top: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  pointer-events: none;
  justify-content: center;
  z-index: 5;
}

#gridController {
  pointer-events: auto;
  background: #181818;
  border: 1px solid #000;
  border-radius: 8px;
  position: relative;
  font-size: 72px;
}
#gridController .elementArea {
  position: relative;
  margin: 32px;
}
#gridController #gridRenderCanvas {
  position: absolute;
  top: 32px;
  left: 32px;
  right: 32px;
  bottom: 32px;
  background-image: url(checkers.png);
  width: auto;
  height: auto;
}
/* ... */

